# StudiaProsteProjekty

./: CMakeLists.txt  EightQueenPuzzle.cpp  KnapsackProblemDynamic.cpp  KnapsackProblemGreedy.cpp  README.md  Sat.cpp
src/: EightQueenPuzzle.cpp  KnapsackProblemDynamic.cpp  KnapsackProblemGreedy.cpp  Sat.cpp
